--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,108 @@
-body {
+/* body {
     margin: 0px;
     font-family: Verdana, Tahoma, sans-serif;
     font-size: 20px;
     line-height: 1.6;
     color: #333;
+} */
+
+body {
+    color: #333;
+    font-family: Verdana, Tahoma, sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
+    }
+  
+.boxes {
+    display:table;
+    width: 100%;
+    height: 100%;
+}
+
+.box {
+    display: table-cell;
+    /* text-align: center; */
+    vertical-align:middle;
+    /* line-height: 3em; */
+}
+
+.box1 {
+    display: block;
+    background-color: #0000;
+}
+
+.box2 {
+background: @green;
+max-width: 200px;
+}
+
+.box3 {
+background: #0000;
 }
 
 
-/* div.head {
-    width:500px;
-    max-width:500px;
-    margin-left:auto !important;
-    margin-right:auto !important;
-} */
+@media (max-width: 420px) {
+    .box {
+        display: block;
+        width: 100%;
+    }
+
+    .box2 {
+    display: table-caption;
+    }
+
+    .box1 {
+    display: table-footer-group;
+    }
+}
+
+div h1 span {
+    padding: 20px;
+    text-align: right;
+    padding-bottom: 40px;
+}
+
+div p {
+    line-height: 30px;
+    display:block;
+    text-align: left;
+}
+
+.tech {
+    text-align: left;
+}
+
+.tech ul {
+    text-align: left;
+    line-height: 0.5;
+    margin-left: 50px;
+    padding-inline-start: 20px;
+}
+
+.photo {
+    width: 20%;
+    text-align: left;
+    padding-right: 140px;
+    padding-top: 40px;
+}
+
+.code {
+    background: rgba(144, 206, 204, 0.3);
+}
+.box.box1, .box.box3 {
+    color:#ffffff;
+}
+
+/*====== Ignore section below ======*/
+
+/* @orange: #BD4932;
+@yellow: #FFD34E;
+@green: #105B63;
+@beige: #FFFAD5; */
+
+
+/* Basic Style*/
+* { margin:0; padding:0;}
+html, body { height: 100%; }
+button { padding: 5px 10px;position:absolute;bottom: 20px;left:20px;display: block; -webkit-appearance: none;background: @orange; outline: none;  border: 2px solid #DB9E36; color: @yellow; border-radius: 10px; box-shadow: 0 2px 3px rgba(0,0,0,0.5);cursor: pointer;}
+button:active {border-color: @beige; color:@beige;}
